Bug 15525 - smbget debug logging doesn't work
Summary: smbget debug logging doesn't work
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Tools (show other bugs)
Version: 4.19.3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-06 08:09 UTC by Andreas Schneider
Modified: 2024-01-08 14:39 UTC (History)
2 users (show)

See Also:


Attachments
patch for 4.19 (3.03 KB, patch)
2023-12-11 08:53 UTC, Andreas Schneider
pfilipensky: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2023-12-06 08:09:53 UTC
Using the command

bin/smbget "smb://ADDOMAIN;smbget_user:loCalMemberPass@10.53.57.29/smbget/testfile" -d10

doesn't print out log level 10 logs.


Patch will follow!
Comment 1 Samba QA Contact 2023-12-07 05:34:03 UTC
This bug was referenced in samba master:

e5fe856e76eba26e3b85a391bcea02dfe045c26e
763b2efe69dc74e1c0cd954607031012f832486d
Comment 2 Andreas Schneider 2023-12-11 08:53:58 UTC
Created attachment 18198 [details]
patch for 4.19
Comment 3 Pavel Filipenský 2023-12-11 10:29:30 UTC
Comment on attachment 18198 [details]
patch for 4.19

This patch for  patch for 4.19 must be applied before patch in https://bugzilla.samba.org/show_bug.cgi?id=15532
Comment 4 Andreas Schneider 2023-12-11 11:59:58 UTC
Jule, can you please apply the patch to 4.19?
Comment 5 Jule Anger 2023-12-11 12:08:21 UTC
Pushed to autobuild-v4-19-test.
Comment 6 Samba QA Contact 2023-12-12 10:02:11 UTC
This bug was referenced in samba v4-19-test:

402042b54838b7abdbb45cef3b52191206f20f55
63969fe9ade06d0cd878a6e01fc1a41d0c88f988
Comment 7 Jule Anger 2023-12-12 10:07:42 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2024-01-08 14:39:01 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.4):

402042b54838b7abdbb45cef3b52191206f20f55
63969fe9ade06d0cd878a6e01fc1a41d0c88f988